JurTranspiler/src/ANTLR/JurParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /Users/strator/Documents/GitHub/JurTranspiler/JurTranspiler/src/ANTLR/Jur.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class JurParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, LINE_COMMENT=2, WHITESPACE=3, NEWLINE=4, COMA=5, DOT=6, SEMICOLON=7, 
		ASSIGN=8, ADD=9, SUBTRACT=10, TIMES=11, DIVIDE=12, LEFT_CURLY=13, RIGHT_CURLY=14, 
		LEFT_PARENT=15, RIGHT_PARENT=16, LEFT_SQUARE_PARENT=17, RIGHT_SQUARE_PARENT=18, 
		LESS=19, LEQUAL=20, GREATER=21, GREQUAL=22, EQUAL=23, WHERE=24, NOT_EQUAL=25, 
		LOGICAL_AND=26, OR=27, STRING_VALUE=28, NUMBER_VALUE=29, BOOL_VALUE=30, 
		NULL_VALUE=31, VALUE=32, STRUCT=33, VOID=34, RETURN=35, BREAK=36, CONTINUE=37, 
		EXIT=38, IF=39, ABSTRACTION=40, MAIN=41, NEW=42, IS=43, AND=44, DEFAULT_VALUE=45, 
		TYPE=46, ELSE=47, FOR=48, EXTERN=49, POLY=50, ARROW=51, PRIMITIVE=52, 
		ARITHMETIC=53, LOGIC=54, ID=55;
	public const int
		RULE_program = 0, RULE_main = 1, RULE_abstraction = 2, RULE_structDeclaration = 3, 
		RULE_inlinedType = 4, RULE_functionDeclaration = 5, RULE_constraints = 6, 
		RULE_constrain = 7, RULE_uninitializedVarDeclaration = 8, RULE_initializedVariableDeclaration = 9, 
		RULE_inferedVariableDeclaration = 10, RULE_type = 11, RULE_statement = 12, 
		RULE_block = 13, RULE_expression = 14;
	public static readonly string[] ruleNames = {
		"program", "main", "abstraction", "structDeclaration", "inlinedType", 
		"functionDeclaration", "constraints", "constrain", "uninitializedVarDeclaration", 
		"initializedVariableDeclaration", "inferedVariableDeclaration", "type", 
		"statement", "block", "expression"
	};

	private static readonly string[] _LiteralNames = {
		null, "':='", null, null, null, "','", "'.'", "';'", "'='", "'+'", "'-'", 
		"'*'", "'/'", "'{'", "'}'", "'('", "')'", "'['", "']'", "'<'", "'<='", 
		"'>'", "'>='", "'=='", "'where'", "'!='", "'&&'", "'||'", null, null, 
		null, "'null'", null, "'struct'", "'void'", "'return'", "'break'", "'continue'", 
		"'exit'", "'if'", "'abstraction'", "'main'", "'new'", "'is'", "'and'", 
		"'default'", "'type'", "'else'", "'for'", "'extern'", "'poly'", "'->'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, "LINE_COMMENT", "WHITESPACE", "NEWLINE", "COMA", "DOT", "SEMICOLON", 
		"ASSIGN", "ADD", "SUBTRACT", "TIMES", "DIVIDE", "LEFT_CURLY", "RIGHT_CURLY", 
		"LEFT_PARENT", "RIGHT_PARENT", "LEFT_SQUARE_PARENT", "RIGHT_SQUARE_PARENT", 
		"LESS", "LEQUAL", "GREATER", "GREQUAL", "EQUAL", "WHERE", "NOT_EQUAL", 
		"LOGICAL_AND", "OR", "STRING_VALUE", "NUMBER_VALUE", "BOOL_VALUE", "NULL_VALUE", 
		"VALUE", "STRUCT", "VOID", "RETURN", "BREAK", "CONTINUE", "EXIT", "IF", 
		"ABSTRACTION", "MAIN", "NEW", "IS", "AND", "DEFAULT_VALUE", "TYPE", "ELSE", 
		"FOR", "EXTERN", "POLY", "ARROW", "PRIMITIVE", "ARITHMETIC", "LOGIC", 
		"ID"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Jur.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static JurParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public JurParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public JurParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(JurParser.Eof, 0); }
		public MainContext[] main() {
			return GetRuleContexts<MainContext>();
		}
		public MainContext main(int i) {
			return GetRuleContext<MainContext>(i);
		}
		public AbstractionContext[] abstraction() {
			return GetRuleContexts<AbstractionContext>();
		}
		public AbstractionContext abstraction(int i) {
			return GetRuleContext<AbstractionContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 34;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==ABSTRACTION || _la==MAIN) {
				{
				State = 32;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case MAIN:
					{
					State = 30; main();
					}
					break;
				case ABSTRACTION:
					{
					State = 31; abstraction();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 36;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 37; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MainContext : ParserRuleContext {
		public ITerminalNode MAIN() { return GetToken(JurParser.MAIN, 0); }
		public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		public MainContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_main; } }
	}

	[RuleVersion(0)]
	public MainContext main() {
		MainContext _localctx = new MainContext(Context, State);
		EnterRule(_localctx, 2, RULE_main);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 39; Match(MAIN);
			State = 40; statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AbstractionContext : ParserRuleContext {
		public ITerminalNode ABSTRACTION() { return GetToken(JurParser.ABSTRACTION, 0); }
		public ITerminalNode NUMBER_VALUE() { return GetToken(JurParser.NUMBER_VALUE, 0); }
		public ITerminalNode LEFT_CURLY() { return GetToken(JurParser.LEFT_CURLY, 0); }
		public ITerminalNode RIGHT_CURLY() { return GetToken(JurParser.RIGHT_CURLY, 0); }
		public FunctionDeclarationContext[] functionDeclaration() {
			return GetRuleContexts<FunctionDeclarationContext>();
		}
		public FunctionDeclarationContext functionDeclaration(int i) {
			return GetRuleContext<FunctionDeclarationContext>(i);
		}
		public StructDeclarationContext[] structDeclaration() {
			return GetRuleContexts<StructDeclarationContext>();
		}
		public StructDeclarationContext structDeclaration(int i) {
			return GetRuleContext<StructDeclarationContext>(i);
		}
		public AbstractionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_abstraction; } }
	}

	[RuleVersion(0)]
	public AbstractionContext abstraction() {
		AbstractionContext _localctx = new AbstractionContext(Context, State);
		EnterRule(_localctx, 4, RULE_abstraction);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 42; Match(ABSTRACTION);
			State = 43; Match(NUMBER_VALUE);
			State = 44; Match(LEFT_CURLY);
			State = 49;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRUCT) | (1L << VOID) | (1L << EXTERN) | (1L << PRIMITIVE) | (1L << ID))) != 0)) {
				{
				State = 47;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
				case 1:
					{
					State = 45; functionDeclaration();
					}
					break;
				case 2:
					{
					State = 46; structDeclaration();
					}
					break;
				}
				}
				State = 51;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 52; Match(RIGHT_CURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StructDeclarationContext : ParserRuleContext {
		public ITerminalNode STRUCT() { return GetToken(JurParser.STRUCT, 0); }
		public ITerminalNode[] ID() { return GetTokens(JurParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(JurParser.ID, i);
		}
		public ITerminalNode LEFT_CURLY() { return GetToken(JurParser.LEFT_CURLY, 0); }
		public ITerminalNode RIGHT_CURLY() { return GetToken(JurParser.RIGHT_CURLY, 0); }
		public ITerminalNode EXTERN() { return GetToken(JurParser.EXTERN, 0); }
		public ITerminalNode LESS() { return GetToken(JurParser.LESS, 0); }
		public ITerminalNode GREATER() { return GetToken(JurParser.GREATER, 0); }
		public InlinedTypeContext[] inlinedType() {
			return GetRuleContexts<InlinedTypeContext>();
		}
		public InlinedTypeContext inlinedType(int i) {
			return GetRuleContext<InlinedTypeContext>(i);
		}
		public UninitializedVarDeclarationContext[] uninitializedVarDeclaration() {
			return GetRuleContexts<UninitializedVarDeclarationContext>();
		}
		public UninitializedVarDeclarationContext uninitializedVarDeclaration(int i) {
			return GetRuleContext<UninitializedVarDeclarationContext>(i);
		}
		public ITerminalNode[] SEMICOLON() { return GetTokens(JurParser.SEMICOLON); }
		public ITerminalNode SEMICOLON(int i) {
			return GetToken(JurParser.SEMICOLON, i);
		}
		public ITerminalNode[] COMA() { return GetTokens(JurParser.COMA); }
		public ITerminalNode COMA(int i) {
			return GetToken(JurParser.COMA, i);
		}
		public StructDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_structDeclaration; } }
	}

	[RuleVersion(0)]
	public StructDeclarationContext structDeclaration() {
		StructDeclarationContext _localctx = new StructDeclarationContext(Context, State);
		EnterRule(_localctx, 6, RULE_structDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 55;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==EXTERN) {
				{
				State = 54; Match(EXTERN);
				}
			}

			State = 57; Match(STRUCT);
			State = 58; Match(ID);
			State = 69;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LESS) {
				{
				State = 59; Match(LESS);
				State = 60; Match(ID);
				State = 65;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==COMA) {
					{
					{
					State = 61; Match(COMA);
					State = 62; Match(ID);
					}
					}
					State = 67;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 68; Match(GREATER);
				}
			}

			State = 71; Match(LEFT_CURLY);
			State = 78;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VOID) | (1L << IS) | (1L << PRIMITIVE) | (1L << ID))) != 0)) {
				{
				State = 76;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case VOID:
				case PRIMITIVE:
				case ID:
					{
					{
					State = 72; uninitializedVarDeclaration();
					State = 73; Match(SEMICOLON);
					}
					}
					break;
				case IS:
					{
					State = 75; inlinedType();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 80;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 81; Match(RIGHT_CURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InlinedTypeContext : ParserRuleContext {
		public ITerminalNode IS() { return GetToken(JurParser.IS, 0); }
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ITerminalNode SEMICOLON() { return GetToken(JurParser.SEMICOLON, 0); }
		public InlinedTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_inlinedType; } }
	}

	[RuleVersion(0)]
	public InlinedTypeContext inlinedType() {
		InlinedTypeContext _localctx = new InlinedTypeContext(Context, State);
		EnterRule(_localctx, 8, RULE_inlinedType);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 83; Match(IS);
			State = 84; type(0);
			State = 85; Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionDeclarationContext : ParserRuleContext {
		public ITerminalNode[] ID() { return GetTokens(JurParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(JurParser.ID, i);
		}
		public ITerminalNode LEFT_PARENT() { return GetToken(JurParser.LEFT_PARENT, 0); }
		public ITerminalNode RIGHT_PARENT() { return GetToken(JurParser.RIGHT_PARENT, 0); }
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ITerminalNode VOID() { return GetToken(JurParser.VOID, 0); }
		public ITerminalNode LESS() { return GetToken(JurParser.LESS, 0); }
		public ITerminalNode GREATER() { return GetToken(JurParser.GREATER, 0); }
		public UninitializedVarDeclarationContext[] uninitializedVarDeclaration() {
			return GetRuleContexts<UninitializedVarDeclarationContext>();
		}
		public UninitializedVarDeclarationContext uninitializedVarDeclaration(int i) {
			return GetRuleContext<UninitializedVarDeclarationContext>(i);
		}
		public ConstraintsContext constraints() {
			return GetRuleContext<ConstraintsContext>(0);
		}
		public ITerminalNode[] COMA() { return GetTokens(JurParser.COMA); }
		public ITerminalNode COMA(int i) {
			return GetToken(JurParser.COMA, i);
		}
		public ITerminalNode ARROW() { return GetToken(JurParser.ARROW, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode SEMICOLON() { return GetToken(JurParser.SEMICOLON, 0); }
		public ITerminalNode EXTERN() { return GetToken(JurParser.EXTERN, 0); }
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionDeclaration; } }
	}

	[RuleVersion(0)]
	public FunctionDeclarationContext functionDeclaration() {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(Context, State);
		EnterRule(_localctx, 10, RULE_functionDeclaration);
		int _la;
		try {
			State = 189;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,27,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 89;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
				case 1:
					{
					State = 87; type(0);
					}
					break;
				case 2:
					{
					State = 88; Match(VOID);
					}
					break;
				}
				State = 91; Match(ID);
				State = 102;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==LESS) {
					{
					State = 92; Match(LESS);
					State = 93; Match(ID);
					State = 98;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					while (_la==COMA) {
						{
						{
						State = 94; Match(COMA);
						State = 95; Match(ID);
						}
						}
						State = 100;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					}
					State = 101; Match(GREATER);
					}
				}

				State = 104; Match(LEFT_PARENT);
				State = 113;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VOID) | (1L << PRIMITIVE) | (1L << ID))) != 0)) {
					{
					State = 105; uninitializedVarDeclaration();
					State = 110;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					while (_la==COMA) {
						{
						{
						State = 106; Match(COMA);
						State = 107; uninitializedVarDeclaration();
						}
						}
						State = 112;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					}
					}
				}

				State = 115; Match(RIGHT_PARENT);
				State = 117;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==WHERE) {
					{
					State = 116; constraints();
					}
				}

				State = 119; block();
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				{
				State = 122;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,15,Context) ) {
				case 1:
					{
					State = 120; type(0);
					}
					break;
				case 2:
					{
					State = 121; Match(VOID);
					}
					break;
				}
				State = 124; Match(ID);
				State = 135;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==LESS) {
					{
					State = 125; Match(LESS);
					State = 126; Match(ID);
					State = 131;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					while (_la==COMA) {
						{
						{
						State = 127; Match(COMA);
						State = 128; Match(ID);
						}
						}
						State = 133;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					}
					State = 134; Match(GREATER);
					}
				}

				State = 137; Match(LEFT_PARENT);
				State = 146;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VOID) | (1L << PRIMITIVE) | (1L << ID))) != 0)) {
					{
					State = 138; uninitializedVarDeclaration();
					State = 143;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					while (_la==COMA) {
						{
						{
						State = 139; Match(COMA);
						State = 140; uninitializedVarDeclaration();
						}
						}
						State = 145;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					}
					}
				}

				State = 148; Match(RIGHT_PARENT);
				State = 150;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==WHERE) {
					{
					State = 149; constraints();
					}
				}

				State = 152; Match(ARROW);
				State = 153; expression(0);
				State = 154; Match(SEMICOLON);
				}
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				{
				State = 156; Match(EXTERN);
				State = 159;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,21,Context) ) {
				case 1:
					{
					State = 157; type(0);
					}
					break;
				case 2:
					{
					State = 158; Match(VOID);
					}
					break;
				}
				State = 161; Match(ID);
				State = 172;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==LESS) {
					{
					State = 162; Match(LESS);
					State = 163; Match(ID);
					State = 168;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					while (_la==COMA) {
						{
						{
						State = 164; Match(COMA);
						State = 165; Match(ID);
						}
						}
						State = 170;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					}
					State = 171; Match(GREATER);
					}
				}

				State = 174; Match(LEFT_PARENT);
				State = 183;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VOID) | (1L << PRIMITIVE) | (1L << ID))) != 0)) {
					{
					State = 175; uninitializedVarDeclaration();
					State = 180;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					while (_la==COMA) {
						{
						{
						State = 176; Match(COMA);
						State = 177; uninitializedVarDeclaration();
						}
						}
						State = 182;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					}
					}
				}

				State = 185; Match(RIGHT_PARENT);
				State = 187;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==WHERE) {
					{
					State = 186; constraints();
					}
				}

				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConstraintsContext : ParserRuleContext {
		public ITerminalNode WHERE() { return GetToken(JurParser.WHERE, 0); }
		public ConstrainContext[] constrain() {
			return GetRuleContexts<ConstrainContext>();
		}
		public ConstrainContext constrain(int i) {
			return GetRuleContext<ConstrainContext>(i);
		}
		public ITerminalNode[] AND() { return GetTokens(JurParser.AND); }
		public ITerminalNode AND(int i) {
			return GetToken(JurParser.AND, i);
		}
		public ConstraintsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constraints; } }
	}

	[RuleVersion(0)]
	public ConstraintsContext constraints() {
		ConstraintsContext _localctx = new ConstraintsContext(Context, State);
		EnterRule(_localctx, 12, RULE_constraints);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 191; Match(WHERE);
			State = 192; constrain();
			State = 197;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==AND) {
				{
				{
				State = 193; Match(AND);
				State = 194; constrain();
				}
				}
				State = 199;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConstrainContext : ParserRuleContext {
		public TypeContext[] type() {
			return GetRuleContexts<TypeContext>();
		}
		public TypeContext type(int i) {
			return GetRuleContext<TypeContext>(i);
		}
		public ITerminalNode IS() { return GetToken(JurParser.IS, 0); }
		public ConstrainContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constrain; } }
	}
